--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
-    "mongoose": "^6.7.2",
+    "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
     "save": "^2.9.0",
     "telegraf": "^4.11.2"
@@ -16,7 +16,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "nuke": "node NukeTown.js"
   },
   "repository": {
     "type": "git",
