--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 STEAMKEY= Steam API Key
 PORT= port
 TELEGRAM_KEY= Telegram API Key
-TELEGRAM_ID= Telegram user ID (used for dev related commands) 
+DEV_ID= Your TelegramID
+STEAM_ID= Your steamID
